// Using proto3 as protobuf version
syntax = "proto3";

import "proto/v1/common.proto";

option go_package = "pkg/api/v1";

/* Cluster is used to identify an elasticsearch cluster
 * If no value is specified for a specific field, its zero value will be used.
 */
message Cluster {
  string cluster_address = 1; // Elasticsearch cluster URL
  string user_name = 2; // Username of the user used to connect to cluster
  string password = 3; // Password of the user used to connect to cluster
  bool exists = 4; // Boolean value to represent cluster presence

  // Currently supported Deployment Templates to be used for an elasticsearch cluster
  enum DeploymentTemplate {
    DEFAULT = 0;
    HOT = 1;
    WARM = 2;
    HOT_WARM = 3;
    HOT_WARM_COLD = 4;
    OPTIMIZED_HOT_WARM = 5;
    OPTIMIZED_HOT_WARM_COLD = 6;
  }

  DeploymentTemplate deployment_template = 5; // Deployment Template of the cluster using enum defined above
  Date creation_date = 6; // Date when the cluster was created using date type from common package
  repeated string support_emails = 7; // List of support team emails.
}